# MovieLibrary-University-Project-CPP

./: CMakeLists.txt  README.md  domain.cpp  domain.h  exeptions.h  gui.cpp  gui.h  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h  validator.cpp  validator.h  watch_list.cpp  watch_list.h
